--- a/theme-light.scss
+++ b/theme-light.scss
@@ -1,5 +1,6 @@
 /*-- scss:defaults --*/
 // Base document colors
 $navbar-bg: #8175A2;
+$body-bg: #ECE8DF;
 $popover-bg: #ECE8DF;
 $toc-color: #8175A2;
