--- a/theme.scss
+++ b/theme.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 // Base document colors
 $navbar-bg: #7C739F;
-$body-bg: #E5DFD5;
-$popover-bg: #E5DFD5;
+$body-bg: #F5F2E9;
+$popover-bg: #F5F2E9;
 $toc-color: #7C739F;
