--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 /* Link Colors */
 a:link {
-  color: #7C739F;
+  color: #5654A2;
 }
 a:visited {
-  color: #7C739F;
+  color: #5654A2;
 }
 a:hover {
-  color: #663486;
+  color: #A172D0;
 }
 a:active {
-  color: #663486;
+  color: #A172D0;
 }
 
 /* Highlight Color */
@@ -26,7 +26,7 @@ a:active {
 blockquote {
   background-color: #ECF0F1;
   padding: 10px;
-  border-color: #7C739F;
+  border-color: #5654A2;
   border-radius: 5px;
 }
 blockquote h3 {
@@ -50,7 +50,7 @@ tr.odd {
 }
 
 .btn-slides {
-  background-color: #7C739F;
+  background-color: #5654A2;
   color: #fff;
   font-weight: bold;
   font-size: 16px;
