--- a/theme.scss
+++ b/theme.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 // Base document colors
-$navbar-bg: #7C739F;
-$body-bg: #F5F2E9;
+$navbar-bg: #5654A2;
+$toc-color: #5654A2;
 $popover-bg: #F5F2E9;
-$toc-color: #7C739F;
+$body-bg: #F5F2E9;
