--- a/theme.scss
+++ b/theme.scss
@@ -2,5 +2,8 @@
 // Base document colors
 $navbar-bg: #5654A2;
 $toc-color: #5654A2;
+$link-color: #5654A2;
+$code-bg: #E5DFD5;
+$code-block-bg: #E5DFD5;
 $popover-bg: #F5F2E9;
-$body-bg: #F5F2E9;
+$input-bg: #F5F2E9;
