--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,20 @@
+/* Blockquote */
+blockquote {
+  background-color: #E5DFD5;
+  padding: 10px;
+  border-color: #5654A2;
+  border-radius: 5px;
+}
+
+/* Table */
+table {
+  width: auto !important;
+}
+thead {
+  border-top: solid #E5DFD5;
+  border-bottom: solid #E5DFD5;
+}
+
 /* Highlight Color */
 ::selection {
   background-color: #D6C2DD !important;
@@ -6,67 +23,4 @@
 ::-moz-selection {
   background-color: #D6C2DD !important;
   color: #694696 !important;
-}
-
-/* Text */
-blockquote {
-  background-color: #ECF0F1;
-  padding: 10px;
-  border-color: #5654A2;
-  border-radius: 5px;
-}
-blockquote h3 {
-  margin-top: 0px;
-}
-
-/* Tables */
-table {
-  width: auto !important;
-}
-thead {
-  border-top: solid #DCDCDC;
-  border-bottom: solid #DCDCDC;
-}
-tr.odd {
-  background-color: #ECF0F1;
-}
-
-.class-buttons {
-  text-align: center;
-}
-
-.btn-slides {
-  background-color: #5654A2;
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
-  border-radius: 10px; /* Rounded edges */
-  text-align: center;
-  text-decoration: none;
-  box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-  user-select: none;
-  padding: .9rem;
-  line-height: .5;
-  border-radius: .3rem;
-}
-
-.btn-notes {
-  background-color: #000000;
-  color: #fff;
-  font-weight: bold;
-  font-size: 16px;
-  border-radius: 10px; /* Rounded edges */
-  text-align: center;
-  text-decoration: none;
-  box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-  cursor: pointer;
-  user-select: none;
-  padding: .9rem;
-  line-height: .5;
-  border-radius: .3rem;
 }
