--- a/theme.scss
+++ b/theme.scss
@@ -3,6 +3,7 @@
 $navbar-bg: #5654A2;
 $toc-color: #5654A2;
 $link-color: #5654A2;
+$code-color: #ED6D46;
 $code-bg: #E5DFD5;
 $code-block-bg: #E5DFD5;
 $popover-bg: #F5F2E9;
