--- a/theme.scss
+++ b/theme.scss
@@ -1,8 +1,6 @@
 /*-- scss:defaults --*/
 // Base document colors
-$navbar-bg: #5654A2;
-$toc-color: #5654A2;
-$link-color: #5654A2;
+$primary: #5654A2;
 $code-color: #ED6D46;
 $code-bg: #E5DFD5;
 $code-block-bg: #E5DFD5;
