--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,9 @@ thead {
   background-color: #D6C2DD !important;
   color: #694696 !important;
 }
+
+/*Spacing*/
+p {
+  margin-top: 0.6rem;
+  margin-bottom: 0.4rem;
+}
