--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+/* Import Academicons */
+@import url('https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css');
+
 /* Blockquote */
 blockquote {
   background-color: #DDDCEC;
