--- a/styling/theme.scss
+++ b/styling/theme.scss
@@ -3,6 +3,6 @@
 $primary: #5654A2;
 $code-color: #ED6D46;
 $code-bg: #EDEDED;
-$code-block-bg: #F5F2E9;
+$code-block-bg: #E8F0F5;
 $popover-bg: #F8F7F0;
 $input-bg: #F8F7F0;
