--- a/styling/styles.css
+++ b/styling/styles.css
@@ -14,10 +14,7 @@ blockquote {
 }
 
 /* Text selection */
-::selection {
-  background-color: #D6C2DD !important;
-  color: #694696 !important;
-}
+::selection,
 ::-moz-selection {
   background-color: #D6C2DD !important;
   color: #694696 !important;
